RESOLVED FIXED 256473
[Cocoa] Video doesn't resize on YouTube.com in theater mode
https://bugs.webkit.org/show_bug.cgi?id=256473
Summary [Cocoa] Video doesn't resize on YouTube.com in theater mode
Jer Noble
Reported 2023-05-08 09:58:15 PDT
[Cocoa] Video doesn't resize on YouTube.com in theater mode
Attachments
Jer Noble
Comment 1 2023-05-08 09:58:18 PDT
Jer Noble
Comment 2 2023-05-08 11:06:40 PDT
EWS
Comment 3 2023-05-08 16:27:04 PDT
Committed 263836@main (95f95436a7cd): <https://commits.webkit.org/263836@main> Reviewed commits have been landed. Closing PR #13587 and removing active labels.
Jer Noble
Comment 4 2023-05-08 20:17:46 PDT
EWS
Comment 5 2023-05-08 20:22:30 PDT
Committed 263846@main (1c22f6e64ba0): <https://commits.webkit.org/263846@main> Reviewed commits have been landed. Closing PR #13621 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.