Source/WebCore/platform/cocoa/WebAVPlayerLayerView.mm
@@ -100,7 +100,7 @@ static void WebAVPlayerLayerView_startRoutingVideoToPictureInPicturePlayerLayerV
     auto *playerLayer = (WebAVPlayerLayer *)[playerLayerView playerLayer];
     auto *pipPlayerLayer = (WebAVPlayerLayer *)[pipView layer];
     [playerLayer setVideoGravity:AVLayerVideoGravityResizeAspectFill];
-    [pipPlayerLayer setFullscreenInterface:playerLayer.fullscreenInterface];
+    [pipPlayerLayer setFullscreenModel:playerLayer.fullscreenModel];
     [pipPlayerLayer setVideoSublayer:playerLayer.videoSublayer];
     [pipPlayerLayer setVideoDimensions:playerLayer.videoDimensions];
     [pipPlayerLayer setVideoGravity:playerLayer.videoGravity];
